Bug 108383 removing strtok() for parsing -P correctly as it should be.  strtok() was added by mistake 10430 /r=ccarlen; /sr=alecf